# Rust_PI_Protogen

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
src/: audio.rs  color.rs  face.rs  gamepad.rs  main.rs  video.rs
src/elements/: mod.rs
src/elements/eyes/: base.rs  circle.rs  cross.rs  default.rs  heart.rs  mod.rs
src/elements/mouth/: base.rs  default.rs  mod.rs
src/elements/nose/: base.rs  default.rs  mod.rs
videos/: README.md
